<resources>
    <string name="app_name">CorrectCare</string>
    <string name="result_text_default">Please focus camera on QR Code</string>
    <string name="action_settings">Settings</string>
    <string name="button_init_sdk">Initialize Sdk</string>
    <string name="button_decode_activation_str">Decode Activation String</string>
    <string name="button_start_sdk">Start Biometric Engines</string>
    <string name="button_activate_authenticator">Activate Authenticator</string>
    <string name="button_enrollment_setup">Enrollment Setup</string>
    <string name="button_enrollment_management">Modality Management</string>
    <string name="button_verify">Authenticate</string>
    <string name="button_sync_modality_availabilities">Sync Modality Availabilities</string>
    <string name="button_get_authenticator_status">Get Authenticator Status</string>
    <string name="button_verify_default">Authenticate with default modality</string>
    <string name="button_authenticate_otp">Authenticate(OTP)</string>
    <string name="button_step_up">Authenticate(Step Up)</string>
    <string name="button_default_modality">Set Default Modality</string>
    <string name="button_get_entity_key">Authenticator Entity Key</string>
    <string name="button_get_authenticator_id">Authenticator Id</string>
    <string name="button_delete_all">Reset App</string>
    <string name="no_pending_verification">There is no pending verification</string>
    <string name="sdk_not_initialized">"Sdk has not been initialized. The initialization is required in onCreate of the main activity."</string>
    <string name="authenticator_not_activated">"Authenticator has not been activated"</string>
    <string name="authenticator_not_enrolled">"Authenticator has not been enrolled"</string>
    <string name="camera_permission_denied">"Camera permission denied."</string>
    <string name="cannot_delete_userdata_sdk_initialization">"SDK has not been initialized, cannot delete user data."</string>
    <string name="cannot_delete_userdata_modality_engine">"Modality engine has not started, cannot delete user data."</string>
    <string name="userdata_deleted">"Successfully deleted user data."</string>
    <string name="entity_key_is">"Entity key is : "</string>
    <string name="synced_active_modalities">"Successfully synced active modalities."</string>
    <string name="enroll_setup_done">"Enrollment setup has been done."</string>
    <string name="authenticator_is_activated">"Authenticator is activated. Please sync modality availabilities right after to ensure all modalities available would show properly for enrollment setup."</string>
    <string name="authenticator_is_already_activated">"Authenticator is already activated. Please sync modality availabilities right after to ensure all modalities available would show properly for enrollment setup."</string>
    <string name="authenticator_already_enrolled">"Authenticator is already enrolled."</string>
    <string name="cannot_activate_authenticator">"Cannot activate the authenticator."</string>
    <string name="authenticator_activated">"Authenticator has already been activated."</string>
    <string name="cannot_retrieve_auth_status">"Cannot retrieve authenticator status."</string>
    <string name="sdk_initialized">"Sdk has been initialized."</string>
    <string name="activation_string_empty">"Empty or invalid activation string"</string>
    <string name="cannot_decode_activation_string">"Cannot decode activation string"</string>
    <string name="activation_string_decoded">"Encrypted activation string is decoded."</string>
    <string name="modality_engines_started">"Modality engines started."</string>
    <string name="modality_engines_not_started">"Modality engines has not been started."</string>
    <string name="enrollment_not_completed">"Enrollment is not completed."</string>
    <string name="network_failure">"Network failure."</string>
    <string name="internal_error">"Internal error."</string>
    <string name="invalid_parameters">Invalid input parameter(s)</string>
    <string name="about_correctcare">"Correct Care is an app that was created by Faraz Ali. It's main purpose is to improve security around the patient record retrieval process in healthcare systems. Secondarily, it also encompasses features that can aid in the reduction of wrong site surgeries."</string>
    <string name="how_getrecords">"The app requires you to verify yourself using one of your enrolled biometrics in order to retrieve a patient's records. So, make sure you have visited the \"Biometrics\" tab and have activated this phone and enrolled at least 2 of your biometrics. Then, simply go back to the main page, select a patient, and tap \"Get Records\" to authenticate yourself."</string>
    <string name="how_identfiypatient">"To identify a patient the phone needs to be activated and the patient must have a biometric in your database/system. Simply tap on the small cameraID icon in the bottom right corner of the main page and authenticate the patient with a biometric."</string>
    <string name="what_defaultbiometric">"A default biometric can be chosen out of your enrolled biometric modalities. It is a way to tell the authentication system which biometric it should automatically target you at when authenticating if the system's authentication level is set to creating requests at 1 modality."</string>
    <string name="what_diffscanandon">"Scanner activation will bring up the phone's camera and will allow you to scan a BioConnect released QR Code which will bind your phone to the authentication system. Online activation does the same protocol through API calls... so you don't need a QR Code for it."</string>
    <string name="can_moremodality">"Absolutely! Just visit the \"Biometrics\" tab and then tap on \"Manage Modalities\". There you can manage your current biometrics and even set or change a default one."</string>

</resources>
